refactor: Validar exportar catalogo vacio